logs/vexmpp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/aiodns'...
Listing './lib/python3.5/site-packages/aiodns-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cookiecutter'...
Listing './lib/python3.5/site-packages/cookiecutter/hooks'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/_static'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/conf.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/docs/conf.py", line 34
    from {{ cookiecutter.py_module }}.__about__ import (
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/licenses'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale/en_US'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/locale/en_US/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/requirements'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/setup.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/setup.py", line 15
    {%- if cookiecutter.license == "MIT" %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests/test_{{cookiecutter.py_module}}.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/tests/test_{{cookiecutter.py_module}}.py", line 2
    import {{ cookiecutter.py_module }}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}'...
Compiling './lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}/__main__.py'...
***   File "./lib/python3.5/site-packages/cookiecutter/{{cookiecutter.project_name}}/{{cookiecutter.py_module}}/__main__.py", line 2
    {%- if cookiecutter.pyapp_type == "asyncio" -%}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/deprecation-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/nicfit'...
Listing './lib/python3.5/site-packages/nicfit/console'...
Listing './lib/python3.5/site-packages/nicfit.py-0.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycares'...
Listing './lib/python3.5/site-packages/pycares-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vexmpp'...
Listing './lib/python3.5/site-packages/vexmpp/features'...
Listing './lib/python3.5/site-packages/vexmpp/protocols'...
Compiling './lib/python3.5/site-packages/vexmpp/stream.py'...
***   File "./lib/python3.5/site-packages/vexmpp/stream.py", line 340
    log.debug(f"MatchStanza: {queued_stanza.stanza.toXml()} xpaths: "
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vexmpp/suelta'...
Listing './lib/python3.5/site-packages/vexmpp/suelta/mechanisms'...
Listing './lib/python3.5/site-packages/vexmpp/vex'...
Listing './lib/python3.5/site-packages/vexmpp-0.1.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
